Update Make.com webhook URL in .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Required: Make.com webhook URL for form submissions
 # Replace with your actual Make.com webhook URL
-MAKE_WEBHOOK_URL=https://hook.make.com/YOUR_WEBHOOK_ID
+MAKE_WEBHOOK_URL=https://hook.make.com/r5m7u7vb40eaqmnty8gt3gqdpxe8er0v@hook.us2.make.com
 
 # Optional: Server port (defaults to 3000)
 PORT=3000
